# FleetManager

./: .dockerignore  .env.example  .env.local  .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_ADVANCED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FleetManager.sln  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LOCAL_SETUP.md  Makefile  QUICK_REFERENCE.md  README.md  SECRETS_SETUP.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  oauth2-proxy.cfg  otel-collector-config.yml  package-lock.json  pyproject.toml  requirements.txt  test_local.py  test_mode_examples.md
.agent/workflows/: deploy-dashboard.md
.github/: copilot-instructions.md
.github/workflows/: build-and-deploy.yml  deploy-email-processor.yml  deploy.yml
FleetManager/: AppHost.cs  FleetManager.csproj
FleetManager.Api/: FleetManager.Api.csproj  FleetManager.Api.http  Program.cs
FleetManager.Api/Contracts/: IReadMessagesService.cs
FleetManager.Api/Properties/: launchSettings.json
FleetManager.AppHost/: FleetManager.AppHost.csproj
FleetManager.AppHost/Properties/: launchSettings.json
FleetManager.Infrastructure/: DependencyInjection.cs  FleetManager.Infrastructure.csproj
FleetManager.Infrastructure/Google/: GmailServiceFactory.cs
database/: Dockerfile  alembic.ini
database/migrations/: env.py
docs/: DEPLOYMENT.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
nginx/: nginx.conf
scripts/: backup.sh  deploy-manual.sh  deploy-to-hetzner.sh  deploy.sh  generate-tokens.sh  health-check.sh  setup-cron.sh  setup-logrotate.sh  setup-server.sh  setup_auth.py  validate-deployment.sh
services/api/: Dockerfile  dependencies.py  main.py  pyproject.toml  requirements.txt  schemas.py
services/api/routers/: drivers.py  ops.py  orders.py  trucks.py
services/database-migration/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  telemetry.py
services/database-migration/migrations/: env.py
services/database-migration/models/: orm.py
services/database-models/: pyproject.toml
services/database-models/database_models/: __init__.py  orm.py
services/database-models/migrations/: env.py
services/database-models/migrations/versions/: 0684cc85fbca_initial_migration.py  9456a7c14c1b_add_route_management_tables.py  a1b2c3d4e5f6_add_truck_status.py  d1cf1f0207c1_add_truck_id_to_driver.py  e2d3f4a5b6c7_add_route_name_remove_driver.py
services/email-processor/: Dockerfile  README.Docker.md  README.md  main.py  pyproject.toml  requirements.txt
services/email-processor/clients/: database_client.py  google_sheets_client.py
services/email-processor/pipeline/: processing_context.py
services/email-processor/pipeline/steps/: geocoding_step.py  postgres_save_step.py
services/email-processor/services/: address_cleaner.py  classifier.py  logistics_data_extract.py
services/email-processor/src/: telemetry.py
services/email-processor/src/clients/: database_client.py  gmail_client.py  google_maps_client.py  processed_email_tracker.py
services/email-processor/src/models/: logistics.py  orm.py
services/email-processor/src/orders/poller/: main.py
services/email-processor/src/orders/poller/clients/: google_sheets_client.py
services/email-processor/src/orders/poller/models/: email.py  logistics.py
services/email-processor/src/orders/poller/pipeline/: pipeline.py
services/email-processor/src/orders/poller/pipeline/steps/: classification_step.py  geocoding_step.py
services/email-processor/src/orders/poller/services/: classifier.py  logistics_data_extract.py
services/email-processor/src/pipeline/: pipeline.py  processing_context.py  processing_step.py
services/email-processor/src/pipeline/steps/: address_cleaning_step.py  classification_step.py  database_save_step.py  geocoding_step.py  google_sheets_save_step.py  logistics_extraction_step.py
services/email-processor/src/services/: address_simplifier.py  classifier.py  email_prompt_construct.py  logistics_data_extract.py
services/email-processor/tests/pipeline/: test_pipeline.py
shared/: __init__.py
src/: __init__.py
tests/: verify_route_management.py
(+54 files in other folders)
