[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "database-models",
]

[tool.uv.sources]
database-models = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["routers", "main.py", "schemas.py", "dependencies.py"]
