[project]
name = "email-processor"
version = "0.1.0"
description = "A service to process logistics orders from emails."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client==2.185.0",
    "google-auth==2.41.1",
    "google-auth-oauthlib==1.2.2",
    "google-auth-httplib2==0.2.0",
    "python-dotenv==1.2.1",
    "click==8.1.8",
    "google-genai==1.46.0",
    "httpx==0.28.1",
    "structlog==25.5.0",
    "pydantic==2.12.3",
    "sqlalchemy==2.0.44",
    "psycopg2-binary==2.9.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pdm.dev-dependencies]
dev = [
    "depcheck",
]
